fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ article {
 .footerNav ul{
   display: flex;
 justify-content: space-evenly;
-margin-left: 175%;
+margin-left: 150%;
 
 
 }
